# gem-test-beam-monitoring

./: .gitignore  app.py  config.yml  daqdash.py  labsetup.py  logger.py  prompt.py  pyproject.toml  run.py  server.py  unpacker.py
configs/: ftm.yml  testbeam.yml
modules/: daq_monitor.py  hv.py  lv_power_supply.py  scope.py
protocols/: serial.py
templates/: index.html
views/: index.html
