[tool.poetry]
name = "operations-monitoring"
version = "0.1.0"
description = ""
authors = ["Antonello Pellecchia <antonello.pellecchia@cern.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
PyYAML = "^6.0"
pyserial = "^3.5"
requests = "^2.26.0"
beautifultable = "^1.0.1"
python-vxi11 = "^0.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
